@@ -2,6 +2,7 @@
 
 	* Remember open tabs and windows per project
 	* Allow hiding of the toolbar
+	* Added a main menu to move items off toolbar
 
 2015-08-15 ajwillia.ms (Andy Williams)
 
